--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.14",
+    "@auth/core": "^0.21.0",
+    "@auth/prisma-adapter": "^1.0.15",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.8.0",
     "next": "14.0.4",
-    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18"
   },
