--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@auth/core": "^0.21.0",
     "@auth/prisma-adapter": "^1.0.15",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/adapter-pg": "^5.11.0",
     "@prisma/client": "^5.8.0",
     "next": "14.0.4",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18"
   },
