--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/adapter-pg": "^5.11.0",
     "@prisma/client": "^5.8.0",
     "next": "14.0.4",
+    "next-auth": "5.0.0-beta.15",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18"
